Coverity analysis defect 105094: Uninitialized scalar field

XMLWordPrintableJSON

    • Fully Compatible
    • ALL
    • v4.0
    • Security 2018-11-19
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      A scalar field is not initialized by the constructor

      Defect 105094 (STATIC_C)
      Checker UNINIT_CTOR (subcategory none)
      File: /src/mongo/db/free_mon/free_mon_queue.h
      Function mongo::FreeMonMessageQueue::FreeMonMessageQueue(bool)
      /src/mongo/db/free_mon/free_mon_queue.h, line: 150
      Class member declaration for "_counter".

              uint64_t _counter;
      

      /src/mongo/db/free_mon/free_mon_queue.h, line: 106
      Non-static class member "_counter" is not initialized in this constructor nor in any functions that it calls.

              FreeMonMessageQueue(bool useCrankForTest = false) : _useCrank(useCrankForTest) {}
      

            Assignee:
            Mark Benvenuto
            Reporter:
            Coverity Collector User
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: