SERVER-37854 Coverity analysis defect 105094: Uninitialized scalar field

(cherry picked from commit 4cafb0b8f0566d7e480983fc57b94b7bfe78c540)